Changes for 2.4.5rc1

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese translation; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...PS. [ZBX-9251] added missing socket closing to avoid large number of opened sockets (igors)
.......PS. [ZBX-9344] fixed infinite looping in telnet.run[] in case there is no password prompt (asaveljevs, dimir)
..F....... [ZBX-9369] removed validation of DB_ID from user profile for removed medias and fixed incorrect DB_ID validation for arrays in bar reports page (Ivo)
..F....... [ZBX-9348] fixed possibility to enable/disable LLD trigger (Ivo)
..F....... [ZBX-9268] fixed misleading message in discovered object indicator tooltip when deletion date is in the past (Ivo)
..F....... [ZBX-4633] fixed host inventories not displaying all filtered results when record count exceeds global limit (Ivo)
..F....... [ZBX-9286] fixed configuration.import, when trigger expression have a user macro (Oleg)
...G...... [ZBX-9283] improved proc_info item (Windows only) to get more information about the processes (dimir)
..F....... [ZBX-8875] fixed undefined index in screens with dynamic graph prototype elements when host is not selected (Ivo)
..F....... [ZBX-9203] fixed host scripts menu popup not properly displaying script name when name contains HTML tags (Ivo)

--------------------------------------------------------------------------------
Changes for 2.4.4

2.4.4rc1 was released as 2.4.4 without any changes

--------------------------------------------------------------------------------
Changes for 2.4.4rc1

New features:
.......PS. [ZBXNEXT-2354] separated VMware performance collector based statistic retrieval from VMware data retrieval and added items to monitor custom performance counters (wiper)
A.F....... [ZBX-1357] enabled Chinese (China) locale to be displayed by default (Richlv)