@@ -175,9 +175,7 @@ function getActionMapBySysmap($sysmap, array $options = array()) {
 
 			case SYSMAP_ELEMENT_TYPE_TRIGGER:
 				$gotos['events'] = array(
-					'triggerid' => $elem['elementid'],
-					'stime' => date(TIMESTAMP_FORMAT, time() - SEC_PER_WEEK),
-					'period' => SEC_PER_WEEK
+					'triggerid' => $elem['elementid']
 				);
 
 				$gotos['showEvents'] = false;
